# jumla

./: README.md  pyproject.toml
src/jumla/: __init__.py  cli.py  dataset.py  log.py  parser.py
